--- a/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
+++ b/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="589.0" prefWidth="566.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.FXMLStudentPageController">
+<AnchorPane id="AnchorPane" prefHeight="589.0" prefWidth="566.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.FXMLStudentPageController">
    <children>
       <BorderPane layoutX="152.0" layoutY="137.0" prefHeight="589.0" prefWidth="504.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
