--- a/src/testverktygfrontend/studentPage/StartTestPopUp.fxml
+++ b/src/testverktygfrontend/studentPage/StartTestPopUp.fxml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="276.0" prefWidth="466.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.StartTestPopUpController">
+<AnchorPane id="AnchorPane" prefHeight="276.0" prefWidth="466.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.StartTestPopUpController">
    <children>
       <Label fx:id="testName" alignment="CENTER" contentDisplay="CENTER" layoutX="147.0" layoutY="111.0" prefHeight="27.0" prefWidth="173.0" textAlignment="CENTER" textFill="#ff5100">
          <font>
             <Font name="QuicksandBook-Regular" size="19.0" />
          </font></Label>
-      <Button fx:id="btnStart" layoutX="121.0" layoutY="189.0" mnemonicParsing="false" stylesheets="@newCascadeStyleSheet.css" text="Starta" />
+      <Button fx:id="btnStart" layoutX="121.0" layoutY="189.0" mnemonicParsing="false" onAction="#startTest" stylesheets="@newCascadeStyleSheet.css" text="Starta" />
       <Button fx:id="btnAvbryt" layoutX="284.0" layoutY="189.0" mnemonicParsing="false" onAction="#cancelPop" stylesheets="@newCascadeStyleSheet.css" text="Avbryt" />
       <Label fx:id="testTime" alignment="CENTER" layoutX="242.0" layoutY="142.0" prefHeight="36.0" prefWidth="43.0" textFill="#d93e00">
          <font>
