--- a/src/testverktygfrontend/studentPage/StartTestPopUp.fxml
+++ b/src/testverktygfrontend/studentPage/StartTestPopUp.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="276.0" prefWidth="466.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.StartTestPopUpController">
+<AnchorPane id="AnchorPane" prefHeight="276.0" prefWidth="466.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.StartTestPopUpController">
    <children>
       <Label fx:id="testName" alignment="CENTER" contentDisplay="CENTER" layoutX="147.0" layoutY="111.0" prefHeight="27.0" prefWidth="173.0" textAlignment="CENTER" textFill="#ff5100">
          <font>
@@ -25,5 +29,6 @@
             <Font name="QuicksandBook-Regular" size="25.0" />
          </font>
       </Label>
+      <Button fx:id="result" layoutX="212.0" layoutY="235.0" mnemonicParsing="false" onAction="#showResult" text="result" />
    </children>
 </AnchorPane>
