--- a/src/testverktygfrontend/teacherPage/FXMLTeacher.fxml
+++ b/src/testverktygfrontend/teacherPage/FXMLTeacher.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,81 +19,105 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.teacherPage.FXMLTeacherController">
+<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.teacherPage.FXMLTeacherController">
    <children>
       <BorderPane prefHeight="635.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <left>
-            <Region prefHeight="635.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
-         </left>
-         <right>
-            <Region prefHeight="635.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
-         </right>
          <center>
-            <HBox alignment="CENTER" spacing="50.0" BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER_LEFT">
                <children>
-                  <VBox alignment="TOP_CENTER" spacing="10.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="489.0" prefWidth="184.0">
                      <children>
-                        <Region prefHeight="60.0" prefWidth="200.0" />
-                        <Label prefHeight="27.0" prefWidth="138.0" text="Kurser">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <ListView fx:id="courseListView" onMouseClicked="#seeCourse" prefHeight="319.0" prefWidth="200.0" />
-                        <Button mnemonicParsing="false" onAction="#createTest" text="Skapa prov" />
-                     </children>
-                  </VBox>
-                  <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" spacing="10.0">
-                     <children>
-                        <TabPane prefHeight="215.0" prefWidth="232.0" tabClosingPolicy="UNAVAILABLE">
-                          <tabs>
-                            <Tab text="Elever">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                       <children>
-                                          <ListView fx:id="studentList" layoutX="-3.0" layoutY="-1.0" onMouseClicked="#seeTests" prefHeight="197.0" prefWidth="241.0" />
-                                       </children>
-                                    </AnchorPane>
-                              </content>
-                            </Tab>
-                            <Tab text="Statistik">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                       <children>
-                                          <ListView layoutY="-18.0" prefHeight="200.0" prefWidth="232.0" />
-                                       </children>
-                                    </AnchorPane>
-                              </content>
-                            </Tab>
-                          </tabs>
-                        </TabPane>
-                        <Separator prefHeight="3.0" prefWidth="223.0" />
-                        <TabPane prefHeight="229.0" prefWidth="223.0" tabClosingPolicy="UNAVAILABLE">
-                          <tabs>
-                            <Tab text="Gjorda tester">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                       <children>
-                                          <ListView fx:id="testDoneList" layoutX="-2.0" layoutY="-2.0" onMouseClicked="#getTest" prefHeight="200.0" prefWidth="230.0" />
-                                       </children>
-                                    </AnchorPane>
-                              </content>
-                            </Tab>
-                            <Tab text="Ogjorda tester">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="204.0" prefWidth="211.0">
-                                       <children>
-                                          <ListView fx:id="testNotDoneList" layoutX="-5.0" layoutY="-2.0" onMouseClicked="#getTest" prefHeight="200.0" prefWidth="232.0" />
-                                       </children>
-                                    </AnchorPane>
-                              </content>
-                            </Tab>
-                          </tabs>
-                        </TabPane>
-                        <HBox alignment="CENTER" spacing="50.0">
+                        <HBox prefHeight="41.0" prefWidth="215.0">
                            <children>
-                              <Button fx:id="statisticButton" mnemonicParsing="false" onAction="#goToStatistics" prefWidth="100.0" text="statistik" />
-                              <Button layoutX="94.0" layoutY="10.0" mnemonicParsing="false" prefWidth="100.0" text="Testresultat" />
+                              <Label fx:id="courseLabelImg" prefHeight="44.0" prefWidth="56.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" />
+                              <Label text="MINA KURSER" textFill="#f26a46">
+                                 <font>
+                                    <Font name="System Bold" size="13.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets top="13.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <ListView fx:id="courseListView" onMouseClicked="#seeCourse" prefHeight="400.0" prefWidth="164.0" stylesheets="@../studentPage/newCascadeStyleSheet.css">
+                           <VBox.margin>
+                              <Insets right="20.0" top="10.0" />
+                           </VBox.margin>
+                        </ListView>
+                        <Button fx:id="btnStart" mnemonicParsing="false" onAction="#createTest" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="Skapa prov">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="489.0" prefWidth="257.0">
+                     <children>
+                        <HBox maxHeight="-Infinity" minHeight="-Infinity" prefHeight="41.0" prefWidth="215.0">
+                           <children>
+                              <Label fx:id="courseLabelImg" prefHeight="44.0" prefWidth="56.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" />
+                              <Label text="ELEVER" textFill="#f26a46">
+                                 <font>
+                                    <Font name="System Bold" size="13.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets top="13.0" />
+                                 </HBox.margin>
+                              </Label>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <ListView fx:id="studentList" maxHeight="-Infinity" minHeight="-Infinity" onMouseClicked="#seeTests" prefHeight="170.0" prefWidth="242.0">
+                           <VBox.margin>
+                              <Insets right="15.0" top="10.0" />
+                           </VBox.margin>
+                        </ListView>
+                        <TabPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="219.0" prefWidth="242.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" tabClosingPolicy="UNAVAILABLE">
+                           <tabs>
+                              <Tab style="-fx-cursor: hand;" text="Tester att göra">
+                                 <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <ListView fx:id="testNotDoneList" layoutY="25.0" onMouseClicked="#getTest" prefHeight="121.0" prefWidth="242.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </Tab>
+                              <Tab style="-fx-cursor: hand;" text="Gjorda tester">
+                                 <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="242.0">
+                                       <children>
+                                          <ListView fx:id="testDoneList" layoutY="-1.0" onMouseClicked="#getTest" prefHeight="121.0" prefWidth="242.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </Tab>
+                           </tabs>
+                           <VBox.margin>
+                              <Insets right="15.0" top="10.0" />
+                           </VBox.margin>
+                        </TabPane>
+                        <HBox>
+                           <children>
+                              <Button fx:id="btnStart" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#goToStatistics" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="Statistik">
+                                 <HBox.margin>
+                                    <Insets left="58.0" top="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="showTest" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="Visa test">
+                                 <HBox.margin>
+                                    <Insets left="20.0" top="10.0" />
+                                 </HBox.margin>
+                              </Button>
                            </children>
                         </HBox>
                      </children>
@@ -97,21 +126,54 @@
             </HBox>
          </center>
          <top>
-            <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+            <HBox fx:id="topHBox" prefHeight="77.0" prefWidth="612.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="användarnamn" prefHeight="36.0" prefWidth="200.0" text="Användarnamn">
-                     <font>
-                        <Font name="Damascus Regular" size="24.0" />
-                     </font>
-                  </Label>
-                  <Region prefHeight="36.0" prefWidth="197.0" />
-                  <Button mnemonicParsing="false" onAction="#logOut" text="Logga ut" />
+                  <Label fx:id="userLabelImg" prefHeight="75.0" prefWidth="111.0" />
+                  <GridPane prefHeight="88.0" prefWidth="574.0">
+                     <children>
+                        <Label fx:id="profileLabel" prefHeight="36.0" prefWidth="77.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label fx:id="studentLabel" text="LÄRARE">
+                           <font>
+                              <Font name="Avenir Book" size="21.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets top="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label fx:id="användarnamn" prefHeight="17.0" prefWidth="199.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     </children>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="97.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="361.0" minWidth="10.0" prefWidth="199.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="238.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                  </GridPane>
                </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
             </HBox>
          </top>
+         <left>
+            <VBox prefHeight="516.0" prefWidth="128.0" style="-fx-background-color: linear-gradient(to bottom, #ff7f50, #10374b);" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="logOut" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#logOut" prefHeight="44.0" prefWidth="86.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="LOGGA UT" textAlignment="CENTER">
+                     <padding>
+                        <Insets top="45.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="20.0" right="10.0" top="460.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </left>
       </BorderPane>
    </children>
 </AnchorPane>
