--- a/src/testverktygfrontend/createTest/FXMLCreateTest.fxml
+++ b/src/testverktygfrontend/createTest/FXMLCreateTest.fxml
@@ -13,9 +13,10 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="622.0" prefWidth="1223.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.createtest.FXMLCreateTestController">
+<AnchorPane id="AnchorPane" prefHeight="622.0" prefWidth="1103.0" style="-fx-background-color: linear-gradient(to bottom, #ff7f50, #10374b);" stylesheets="@createtest.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.createtest.FXMLCreateTestController">
    <children>
-      <VBox layoutX="180.0" layoutY="83.0">
+      <Label layoutX="502.0" layoutY="35.0" text="Skapa nytt test" />
+      <VBox layoutX="112.0" layoutY="83.0">
          <children>
             <Label text="Namn" />
             <TextField fx:id="txtFieldTestName" prefHeight="31.0" prefWidth="402.0" promptText="namn" />
@@ -61,9 +62,9 @@
                </VBox.margin></RadioButton>
             <HBox>
                <children>
-                  <Button fx:id="btnPreviewTest" mnemonicParsing="false" onAction="#previewTest" prefWidth="150.0" text="Granska testet" />
+                  <Button id="createTestButton" fx:id="btnPreviewTest" mnemonicParsing="false" onAction="#previewTest" prefWidth="150.0" text="Granska testet" />
                   <Region HBox.hgrow="ALWAYS" />
-                  <Button fx:id="btnSaveTest" alignment="CENTER" mnemonicParsing="false" onAction="#saveTestToDb" prefWidth="150.0" text="Spara testet" />
+                  <Button id="createTestButton" fx:id="btnSaveTest" alignment="CENTER" mnemonicParsing="false" onAction="#saveTestToDb" prefWidth="150.0" text="Spara testet" />
                </children>
                <VBox.margin>
                   <Insets top="43.0" />
@@ -71,7 +72,7 @@
             </HBox>
          </children>
       </VBox>
-      <VBox layoutX="649.0" layoutY="83.0">
+      <VBox layoutX="591.0" layoutY="83.0">
          <children>
             <Label fx:id="lblQuestionCount" />
             <TextField fx:id="txtFieldQuestion" prefHeight="31.0" prefWidth="402.0" promptText="fråga" />
@@ -89,18 +90,18 @@
                <children>
                   <HBox>
                      <children>
-                        <Button fx:id="btnSaveQuestion" mnemonicParsing="false" onAction="#saveQuestion" prefWidth="150.0" text="Spara fråga" />
+                        <Button id="createTestButton" fx:id="btnSaveQuestion" mnemonicParsing="false" onAction="#saveQuestion" prefWidth="150.0" text="Spara fråga" />
                         <Region HBox.hgrow="ALWAYS" />
-                        <Button fx:id="btnNewAnswerAlternative" alignment="CENTER" mnemonicParsing="false" onAction="#newAnswerAlternative" prefHeight="31.0" prefWidth="40.0" text="+ ">
+                        <Button id="createTestButton" fx:id="btnNewAnswerAlternative" alignment="CENTER" mnemonicParsing="false" onAction="#newAnswerAlternative" prefHeight="31.0" prefWidth="40.0" text="+ ">
                            <HBox.margin>
                               <Insets right="10.0" />
                            </HBox.margin></Button>
-                        <Button fx:id="btnRemoveAnswerAltenative" mnemonicParsing="false" onAction="#removeAnswerAlternative" prefWidth="40.0" text="-" />
+                        <Button id="createTestButton" fx:id="btnRemoveAnswerAltenative" mnemonicParsing="false" onAction="#removeAnswerAlternative" prefWidth="40.0" text="-" />
                      </children>
                   </HBox>
                   <HBox>
                      <children>
-                        <Button fx:id="btnNewQuestion" mnemonicParsing="false" onAction="#newQuestion" prefWidth="150.0" text="Ny fråga" />
+                        <Button id="createTestButton" fx:id="btnNewQuestion" mnemonicParsing="false" onAction="#newQuestion" prefWidth="150.0" text="Ny fråga" />
                      </children>
                   </HBox>
                </children>
@@ -110,6 +111,5 @@
             </VBox>
          </children>
       </VBox>
-      <Label layoutX="562.0" layoutY="36.0" text="Skapa nytt test" />
    </children>
 </AnchorPane>
