--- a/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
+++ b/src/testverktygfrontend/doingTest/FXMLDoingTest.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -31,8 +32,14 @@
       <Button layoutX="517.0" layoutY="402.0" mnemonicParsing="false" text="Skicka in" visible="false" />
       <Label fx:id="arrowLeft" layoutX="424.0" layoutY="366.0" prefHeight="27.0" prefWidth="73.0" text="Label" visible="false" />
       <Label fx:id="arrowRight" blendMode="SRC_ATOP" layoutX="517.0" layoutY="366.0" prefHeight="27.0" prefWidth="73.0" text="Label" visible="false" />
-      <ImageView blendMode="SRC_ATOP" fitHeight="35.0" fitWidth="56.0" layoutX="424.0" layoutY="358.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="35.0" fitWidth="52.0" layoutX="518.0" layoutY="358.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView blendMode="SRC_ATOP" fitHeight="35.0" fitWidth="56.0" layoutX="461.0" layoutY="358.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@arrowLeft.png" />
+         </image></ImageView>
+      <ImageView fitHeight="35.0" fitWidth="52.0" layoutX="518.0" layoutY="358.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@arrowRight.png" />
+         </image></ImageView>
       <Label fx:id="countDownLabel" layoutX="497.0" layoutY="21.0" prefHeight="27.0" prefWidth="73.0" text="Label">
          <font>
             <Font size="14.0" />
