--- a/src/testverktygfrontend/Statistic/StatisticsPage.fxml
+++ b/src/testverktygfrontend/Statistic/StatisticsPage.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
@@ -14,37 +20,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.Statistic.StatisticsPageController">
+<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.Statistic.StatisticsPageController">
    <children>
       <BorderPane layoutX="200.0" layoutY="135.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <top>
-            <HBox alignment="CENTER_LEFT" prefHeight="63.0" prefWidth="600.0" spacing="15.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Region prefHeight="63.0" prefWidth="0.0" />
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#back" text="Tillfällig tillbaka knapp" />
-                  <Label fx:id="courseLabel" prefHeight="67.0" prefWidth="175.0" text="Kursnamn">
-                      <tooltip>
-                <Tooltip text="This is a button. Click on it." />
-            </tooltip>
-                     <padding>
-                        <Insets left="15.0" />
-                     </padding>
-                     <font>
-                        <Font size="36.0" />
-                     </font>
-                  </Label>
-               </children>
-               <BorderPane.margin>
-                  <Insets />
-               </BorderPane.margin>
-            </HBox>
-         </top>
-         <left>
-            <Region prefHeight="582.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
-         </left>
-         <right>
-            <Region prefHeight="582.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
-         </right>
          <center>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
@@ -66,7 +44,13 @@
                   <HBox alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="10.0">
                      <children>
                         <Region prefHeight="30.0" prefWidth="100.0" />
-                        <Label text="Statistik">
+                        <Label fx:id="courseLabel" prefHeight="67.0" prefWidth="175.0" text="Kursnamn">
+                            <tooltip>
+                      <Tooltip text="This is a button. Click on it." />
+                  </tooltip>
+                           <padding>
+                              <Insets left="15.0" />
+                           </padding>
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -90,6 +74,68 @@
                </children>
             </VBox>
          </center>
+         <top>
+            <HBox fx:id="topHBox" alignment="CENTER_LEFT" prefHeight="77.0" prefWidth="612.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" BorderPane.alignment="CENTER">
+               <children>
+                  <Button id="backLabel" fx:id="backLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#back" prefHeight="44.0" prefWidth="50.0" stylesheets="@newCascadeStyleSheet.css" text="TIILBAKA" textAlignment="CENTER">
+                     <HBox.margin>
+                        <Insets bottom="15.0" left="5.0" right="5.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets top="45.0" />
+                     </padding>
+                  </Button>
+                  <Label fx:id="userLabelImg" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="50.0">
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin>
+                  </Label>
+                  <GridPane prefHeight="88.0" prefWidth="574.0">
+                     <children>
+                        <Label fx:id="profileLabel" prefHeight="34.0" prefWidth="73.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label fx:id="studentLabel" text="LÄRARE">
+                           <font>
+                              <Font name="Avenir Book" size="21.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets top="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label fx:id="användarnamn" prefHeight="17.0" prefWidth="199.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="Statistik" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                     </children>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="103.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="361.0" minWidth="10.0" prefWidth="157.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="238.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                  </GridPane>
+               </children>
+            </HBox>
+         </top>
+         <left>
+            <VBox prefHeight="516.0" prefWidth="128.0" style="-fx-background-color: linear-gradient(to bottom, #ff7f50, #10374b);" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="logOut" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#logOut" prefHeight="44.0" prefWidth="86.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="LOGGA UT" textAlignment="CENTER">
+                     <padding>
+                        <Insets top="45.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="20.0" right="10.0" top="460.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </left>
       </BorderPane>
    </children>
 </AnchorPane>
