--- a/src/testverktygfrontend/teacherPage/FXMLTeacher.fxml
+++ b/src/testverktygfrontend/teacherPage/FXMLTeacher.fxml
@@ -126,49 +126,46 @@
             </HBox>
          </center>
          <top>
-            <HBox fx:id="topHBox" prefHeight="77.0" prefWidth="612.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" BorderPane.alignment="CENTER">
+            <HBox fx:id="topHBox" alignment="CENTER" spacing="10.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="userLabelImg" prefHeight="75.0" prefWidth="111.0" />
-                  <GridPane prefHeight="88.0" prefWidth="574.0">
+                  <Label fx:id="userLabelImg" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="50.0">
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin>
+                  </Label>
+                  <VBox alignment="CENTER">
                      <children>
-                        <Label fx:id="profileLabel" prefHeight="36.0" prefWidth="77.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="10.0" />
-                           </GridPane.margin>
-                        </Label>
                         <Label fx:id="studentLabel" text="LÄRARE">
                            <font>
                               <Font name="Avenir Book" size="21.0" />
                            </font>
-                           <GridPane.margin>
-                              <Insets top="20.0" />
-                           </GridPane.margin>
                         </Label>
-                        <Label fx:id="användarnamn" prefHeight="17.0" prefWidth="199.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="profileLabel" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " />
                      </children>
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="97.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="361.0" minWidth="10.0" prefWidth="199.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="238.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                  </GridPane>
+                  </VBox>
+                  <Region prefHeight="75.0" prefWidth="18.0" />
+                  <Label text="Hem" />
+                  <Region prefHeight="75.0" prefWidth="230.0" />
+                  <Button fx:id="logOut" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#logOut" prefHeight="44.0" prefWidth="86.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="LOGGA UT" textAlignment="CENTER">
+                     <padding>
+                        <Insets top="40.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="30.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
             </HBox>
          </top>
          <left>
-            <VBox prefHeight="516.0" prefWidth="128.0" style="-fx-background-color: linear-gradient(to bottom, #ff7f50, #10374b);" BorderPane.alignment="CENTER">
+            <VBox alignment="BOTTOM_CENTER" prefHeight="516.0" prefWidth="128.0" spacing="20.0" style="-fx-background-color: linear-gradient(to bottom, #ff7f50, #10374b);" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="logOut" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#logOut" prefHeight="44.0" prefWidth="86.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="LOGGA UT" textAlignment="CENTER">
+                  <Button id="backLabel" fx:id="backLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#back" prefHeight="44.0" prefWidth="50.0" stylesheets="@../Statistic/newCascadeStyleSheet.css" text="TIILBAKA" textAlignment="CENTER">
                      <padding>
                         <Insets top="45.0" />
                      </padding>
                      <VBox.margin>
-                        <Insets left="20.0" right="10.0" top="460.0" />
+                        <Insets bottom="20.0" />
                      </VBox.margin>
                   </Button>
                </children>
