Testresultat sidan är klar, både funktionalitet och design

--- a/src/testverktygfrontend/studentPage/newCascadeStyleSheet.css
+++ b/src/testverktygfrontend/studentPage/newCascadeStyleSheet.css
@@ -125,6 +125,11 @@ and open the template in the editor.
 -fx-font-weight: bold;
  -fx-font-size: 12px;
 }
+
+#testsDone .list-cell:filled:selected {
+    -fx-background-color: #5b5c5e;
+     -fx-text-fill: #dbdde0;
+}
 /*#testsDone .list-cell:odd {
 -fx-background-color: white;
 -fx-text-fill:#4a7720;
