--- a/src/testverktygfrontend/doingTest/FXMLShowTestResult.fxml
+++ b/src/testverktygfrontend/doingTest/FXMLShowTestResult.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,19 +8,92 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.doingTest.FXMLShowTestResultController">
+<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" style="-fx-background-color: #f7f7f7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.doingTest.FXMLShowTestResultController">
    <children>
-      <Label layoutX="227.0" layoutY="57.0" text="Du har skickat in testet!" />
-      <StackPane layoutX="200.0" layoutY="94.0" prefHeight="150.0" prefWidth="200.0">
+      <VBox fx:id="vBoxTop" alignment="CENTER" layoutY="76.0" prefHeight="138.0" prefWidth="622.0" style="-fx-background-color: #ea6b4f;" stylesheets="@newCascadeTestResult.css">
          <children>
-            <Button fx:id="showResult" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showResult" text="visa resultat" textAlignment="CENTER" />
-            <Label fx:id="showText" prefHeight="101.0" prefWidth="200.0" text="Läraren behöver rätta provet,&#10;du kommer få resultatet&#10;om några dagar!" visible="false" />
+            <Label fx:id="confirmation" stylesheets="@newCascadeTestResult.css" text="DU HAR LÄMNAT IN TESTET" />
+            <StackPane prefHeight="95.0" prefWidth="622.0">
+               <children>
+                  <Button fx:id="showResult" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showResult" stylesheets="@newCascadeTestResult.css" text="visa resultat" textAlignment="CENTER">
+                     <StackPane.margin>
+                        <Insets top="60.0" />
+                     </StackPane.margin></Button>
+                  <Label fx:id="showText" prefHeight="101.0" prefWidth="306.0" stylesheets="@newCascadeTestResult.css" text="Läraren behöver rätta provet,du kommer få &#10;resultatet om några dagar!" textAlignment="CENTER" visible="false" />
+               </children>
+            </StackPane>
          </children>
-      </StackPane>
+      </VBox>
       <Label fx:id="show" layoutX="146.0" layoutY="272.0" prefHeight="63.0" prefWidth="298.0" />
-      <VBox layoutX="38.0" layoutY="211.0" prefHeight="390.0" prefWidth="525.0">
+      <Button fx:id="myPage" layoutX="513.0" layoutY="580.0" mnemonicParsing="false" onAction="#goToMyPage" stylesheets="@newCascadeTestResult.css" text="min sida" AnchorPane.topAnchor="580.0" />
+      <ScrollPane fx:id="scroll" layoutX="17.0" layoutY="284.0" prefHeight="288.0" prefWidth="604.0" stylesheets="@newCascadeTestResult.css" visible="false" AnchorPane.topAnchor="284.0">
+         <content>
+            <VBox fx:id="vBox" prefHeight="321.0" prefWidth="530.0">
+               <padding>
+                  <Insets left="15.0" top="15.0" />
+               </padding>
+            </VBox>
+         </content>
+      </ScrollPane>
+      <HBox fx:id="topHBox" layoutY="-1.0" prefHeight="77.0" prefWidth="622.0" stylesheets="@../studentPage/newCascadeStyleSheet.css">
          <children>
-            <ListView fx:id="resultView" prefHeight="391.0" prefWidth="525.0" visible="false" />
+            <Label fx:id="userLabelImg" prefHeight="75.0" prefWidth="111.0" />
+            <GridPane prefHeight="88.0" prefWidth="574.0">
+               <children>
+                  <Label fx:id="profileLabel" prefHeight="36.0" prefWidth="77.0" stylesheets="@../studentPage/newCascadeStyleSheet.css" text="MIN PROFIL " GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="studentLabel" text="STUDENT">
+                     <font>
+                        <Font name="Avenir Book" size="21.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets top="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="userName" prefHeight="17.0" prefWidth="199.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="97.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="361.0" minWidth="10.0" prefWidth="199.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="238.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+            </GridPane>
+         </children>
+      </HBox>
+      <VBox fx:id="resultBox" layoutX="24.0" layoutY="228.0" prefHeight="63.0" prefWidth="477.0" visible="false">
+         <children>
+            <HBox prefHeight="23.0" prefWidth="475.0">
+               <children>
+                  <Label fx:id="testI" prefHeight="18.0" prefWidth="49.0" stylesheets="@newCascadeTestResult.css" text="TEST I">
+                     <HBox.margin>
+                        <Insets top="3.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="testName" prefHeight="28.0" prefWidth="186.0" stylesheets="@newCascadeTestResult.css">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label fx:id="totalPoang" prefHeight="18.0" prefWidth="116.0" stylesheets="@newCascadeTestResult.css" text="TOTAL POÄNG: ">
+                     <HBox.margin>
+                        <Insets top="9.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="points" prefHeight="35.0" prefWidth="119.0" stylesheets="@newCascadeTestResult.css" />
+               </children>
+            </HBox>
          </children>
       </VBox>
    </children>
