--- a/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
+++ b/src/testverktygfrontend/studentPage/FXMLStudentPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.FXMLStudentPageController">
+<AnchorPane id="AnchorPane" prefHeight="635.0" prefWidth="600.0" style="-fx-background-color: #f7f7f7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testverktygfrontend.studentPage.FXMLStudentPageController">
    <children>
       <BorderPane layoutX="152.0" layoutY="137.0" prefHeight="589.0" prefWidth="504.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -66,7 +66,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="242.0">
                                  <children>
-                                    <ListView fx:id="testsDone" layoutY="-1.0" onMouseClicked="#showButtonResult" prefHeight="328.0" prefWidth="242.0" />
+                                    <ListView fx:id="testsDone" layoutY="-1.0" onMouseClicked="#showButtonResult" prefHeight="328.0" prefWidth="242.0" stylesheets="@newCascadeStyleSheet.css" />
                                  </children>
                               </AnchorPane>
                         </content>
